@@ -1,3 +1,5 @@
+/* -*- coding: utf-8; indent-tabs-mode: nil; tab-width: 4; c-basic-offset: 4; -*- */
+/* vim:set fileencodings=utf-8 tabstop=4 expandtab shiftwidth=4 softtabstop=4: */
 /**
  * Copyright (C) 2010 Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
  *
